fix, styles, userLocation, currVisibility

--- a/src/scss/blocks/weather/_weather.scss
+++ b/src/scss/blocks/weather/_weather.scss
@@ -48,7 +48,7 @@
         flex-direction: column;
     }
     &-temperature {
-        font-size: 80px;
+        font-size: 72px;
         font-weight: 700;
         line-height: 1;
 
@@ -62,7 +62,7 @@
         display: flex;
         align-items: center;
 
-        
+        max-width: 232px;
         line-height: 1;
         font-weight: 600;
         &_text {
@@ -105,7 +105,8 @@
         height: 202px;
     }
     &-weather {
-        font-size: 32px;
+        margin-top: 2px;
+        font-size: 30px;
         font-weight: 700;
         text-align: center;
         text-transform: capitalize;
@@ -121,7 +122,7 @@
     &-other {
         display: flex;
         flex-direction: column;
-        width: 110px;
+        max-width: 110px;
         height: 132px;
 
         &_value {
